--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.2.0-1",
+    "version": "0.3.0",
     "private": true,
     "scripts": {
         "dev": "npm run development",
